css/colour.css
/* ... */
.TopInpageNav select {
    background-color: #fff;
}

.keywordselected a:visited, .keywordselected a:link {
    color: #fff;
}

#Header #ssearchbox:focus {
    background-color: #fff;
}

/* Highlight number of returned search results */
#SearchResultFound .Selected {
    font-weight: bold;
}

/* Browse bar */
#BrowseBar a, #BrowseBarTab, #BrowseBarTab a:hover {color: #fff;}
.BrowseBarText {color: #fff;}
.BrowseBarItem.ui-droppable-hover a .BrowseBarLink{border: 2px solid #FFF;}

/* Upload buttons */
a.ui-button.plupload_button {
    background-color: #2e99e6;
    color: white;
    border-radius: 4px;
    font-size: 1.2em;
    border: none;
    padding: 6px 14px;
}
a.ui-button.plupload_button:hover {
    border: none;
    opacity: 0.8;
}
a.ui-button.plupload_button.ui-button-disabled {
    background-color: white;
    color: gray;
}
.plupload_button .ui-icon.ui-icon-circle-plus,
.plupload_button .ui-icon.ui-icon-circle-arrow-e,
.plupload_button .ui-icon.ui-icon-circle-close {
    background-image: url("smoothness/images/ui-icons_ffffff_256x240.png");
}
.plupload_button .ui-button-disabled .ui-icon.ui-icon-circle-plus,
.plupload_button .ui-button-disabled .ui-icon.ui-icon.ui-icon-circle-arrow-e,
.plupload_button .ui-button-disabled .ui-icon.ui-icon-circle-close {
    background-image: url("smoothness/images/ui-icons_777777_256x240.png");
}

/* Scrollbar styling */
::-webkit-scrollbar:vertical {width:12px;}
::-webkit-scrollbar:horizonal {height:12px;}
::-webkit-scrollbar,::-webkit-scrollbar-corner {background:none;}
::-webkit-scrollbar-thumb {background:rgba(0,0,0,0.3);border-radius: 6px;}
::-webkit-scrollbar-thumb:hover{background:rgba(0,0,0,0.35);border-radius: 6px;}
::-webkit-scrollbar-thumb:active{background:rgba(0,0,0,0.4);border-radius: 6px;}

